--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
 	},
 	"devDependencies": {
 		"@neutralinojs/neu": "^9.3.1",
+		"@types/socket.io": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
 		"esbuild": "^0.15.9",
 		"eslint": "^8.24.0",
-		"express": "^4.18.1",
+		"express": "^4.18.2",
 		"puppeteer": "^18.0.5",
 		"typescript": "^4.8.3"
 	}
